syntax = "proto3";

package trains.v1;

option go_package = "github.com/asfourco/grpc-train/trains/api/v1";

message Train {
  string id = 1;
  string from = 2;
  string to = 3;
  int32 capacity = 4;
  string departure = 5;
  string arrival = 6;
}

message ListTrainsRequest {}

message ListTrainsResponse { repeated Train trains = 1; }

message CreateTrainRequest {
  string id = 1;
  string from = 2;
  string to = 3;
  int32 capacity = 4;
  string departure = 5;
  string arrival = 6;
}

message CreateTrainResponse { Train train = 1; }

service TrainsService {
  rpc CreateTrain(CreateTrainRequest) returns (CreateTrainResponse);
  rpc ListTrains(ListTrainsRequest) returns (ListTrainsResponse);
}
